testsuite/tests/properties/internal_use/test.out
test.py:35: error: Def._env_mappings_0 is for internal use only
Done
